--- a/pmEvent/en.lproj/MainMenu.xib
+++ b/pmEvent/en.lproj/MainMenu.xib
@@ -1952,7 +1952,7 @@
 											<string key="NSFrame">{{23, 28}, {22, 14}}</string>
 											<reference key="NSSuperview" ref="612178343"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="449615675"/>
+											<reference key="NSNextKeyView"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="523898448">
 												<int key="NSCellFlags">68288064</int>
@@ -2002,29 +2002,6 @@
 												<int key="NSDatePickerElements">12</int>
 												<int key="NSDatePickerType">0</int>
 												<bool key="NSSuppressStepper">YES</bool>
-												<reference key="NSBackgroundColor" ref="711617503"/>
-												<reference key="NSTextColor" ref="564484437"/>
-											</object>
-										</object>
-										<object class="NSDatePicker" id="449615675">
-											<reference key="NSNextResponder" ref="612178343"/>
-											<int key="NSvFlags">268</int>
-											<string key="NSFrame">{{42, 24}, {147, 27}}</string>
-											<reference key="NSSuperview" ref="612178343"/>
-											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="1014099112"/>
-											<bool key="NSEnabled">YES</bool>
-											<object class="NSDatePickerCell" key="NSCell" id="492836686">
-												<int key="NSCellFlags">67239424</int>
-												<int key="NSCellFlags2">131072</int>
-												<reference key="NSContents" ref="300519662"/>
-												<reference key="NSSupport" ref="26"/>
-												<reference key="NSControlView" ref="449615675"/>
-												<double key="NSTimeInterval">0.0</double>
-												<int key="NSDatePickerElements">238</int>
-												<int key="NSDatePickerType">0</int>
-												<bool key="NSSuppressStepper">YES</bool>
-												<bool key="NSDrawsBackground">NO</bool>
 												<reference key="NSBackgroundColor" ref="711617503"/>
 												<reference key="NSTextColor" ref="564484437"/>
 											</object>
@@ -2119,6 +2096,43 @@
 												<bool key="NSUsesItemFromMenu">YES</bool>
 												<bool key="NSAltersState">YES</bool>
 												<int key="NSArrowPosition">2</int>
+											</object>
+										</object>
+										<object class="NSTextField" id="955289976">
+											<reference key="NSNextResponder" ref="612178343"/>
+											<int key="NSvFlags">268</int>
+											<string key="NSFrame">{{41, 28}, {185, 14}}</string>
+											<reference key="NSSuperview" ref="612178343"/>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView" ref="1014099112"/>
+											<string key="NSReuseIdentifierKey">_NS:3936</string>
+											<bool key="NSEnabled">YES</bool>
+											<object class="NSTextFieldCell" key="NSCell" id="129364360">
+												<int key="NSCellFlags">68288064</int>
+												<int key="NSCellFlags2">-1874721792</int>
+												<string key="NSContents">Label</string>
+												<reference key="NSSupport" ref="26"/>
+												<object class="NSDateFormatter" key="NSFormatter" id="327328872">
+													<object class="NSMutableDictionary" key="NS.attributes">
+														<bool key="EncodedWithXMLCoder">YES</bool>
+														<object class="NSArray" key="dict.sortedKeys">
+															<bool key="EncodedWithXMLCoder">YES</bool>
+															<string>dateFormat</string>
+															<string>formatterBehavior</string>
+														</object>
+														<object class="NSMutableArray" key="dict.values">
+															<bool key="EncodedWithXMLCoder">YES</bool>
+															<string>y-MM-dd HH:mm:ss a</string>
+															<integer value="1040"/>
+														</object>
+													</object>
+													<string key="NS.format">y-MM-dd HH:mm:ss a</string>
+													<bool key="NS.natural">NO</bool>
+												</object>
+												<string key="NSCellIdentifier">_NS:3936</string>
+												<reference key="NSControlView" ref="955289976"/>
+												<reference key="NSBackgroundColor" ref="196156269"/>
+												<reference key="NSTextColor" ref="564484437"/>
 											</object>
 										</object>
 									</object>
@@ -4637,26 +4651,6 @@
 					<int key="connectionID">786</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: alarmDate</string>
-						<reference key="source" ref="449615675"/>
-						<reference key="destination" ref="856065510"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="449615675"/>
-							<reference key="NSDestination" ref="856065510"/>
-							<string key="NSLabel">value: alarmDate</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">alarmDate</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSConditionallySetsEnabled</string>
-								<boolean value="NO" key="NS.object.0"/>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">788</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">nextKeyView</string>
 						<reference key="source" ref="258837243"/>
@@ -5096,6 +5090,22 @@
 						</object>
 					</object>
 					<int key="connectionID">1003</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: alarmDate</string>
+						<reference key="source" ref="955289976"/>
+						<reference key="destination" ref="856065510"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="955289976"/>
+							<reference key="NSDestination" ref="856065510"/>
+							<string key="NSLabel">value: alarmDate</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">alarmDate</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">1009</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -6465,11 +6475,11 @@
 							<reference ref="1038369624"/>
 							<reference ref="1050687191"/>
 							<reference ref="160782070"/>
-							<reference ref="449615675"/>
 							<reference ref="616839674"/>
 							<reference ref="851193205"/>
 							<reference ref="532161449"/>
 							<reference ref="1014099112"/>
+							<reference ref="955289976"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
@@ -6479,15 +6489,6 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="805844770"/>
-						</object>
-						<reference key="parent" ref="129090032"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">589</int>
-						<reference key="object" ref="449615675"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="492836686"/>
 						</object>
 						<reference key="parent" ref="129090032"/>
 					</object>
@@ -6546,11 +6547,6 @@
 						<int key="objectID">597</int>
 						<reference key="object" ref="750062133"/>
 						<reference key="parent" ref="1050687191"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">598</int>
-						<reference key="object" ref="492836686"/>
-						<reference key="parent" ref="449615675"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">599</int>
@@ -7356,6 +7352,29 @@
 						<reference key="object" ref="536778767"/>
 						<reference key="parent" ref="1071732933"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1004</int>
+						<reference key="object" ref="955289976"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="129364360"/>
+						</object>
+						<reference key="parent" ref="129090032"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1005</int>
+						<reference key="object" ref="129364360"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="327328872"/>
+						</object>
+						<reference key="parent" ref="955289976"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1006</int>
+						<reference key="object" ref="327328872"/>
+						<reference key="parent" ref="129364360"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -7365,6 +7384,10 @@
 					<string>-1.IBPluginDependency</string>
 					<string>-2.IBPluginDependency</string>
 					<string>-3.IBPluginDependency</string>
+					<string>1004.IBPluginDependency</string>
+					<string>1005.IBPluginDependency</string>
+					<string>1006.IBDateFormatterBehaviorMetadataKey</string>
+					<string>1006.IBPluginDependency</string>
 					<string>112.IBPluginDependency</string>
 					<string>124.IBPluginDependency</string>
 					<string>125.IBPluginDependency</string>
@@ -7552,7 +7575,6 @@
 					<string>587.IBPluginDependency</string>
 					<string>588.IBAttributePlaceholdersKey</string>
 					<string>588.IBPluginDependency</string>
-					<string>589.IBPluginDependency</string>
 					<string>590.IBPluginDependency</string>
 					<string>591.IBPluginDependency</string>
 					<string>592.IBPluginDependency</string>
@@ -7561,7 +7583,6 @@
 					<string>595.IBPluginDependency</string>
 					<string>596.IBPluginDependency</string>
 					<string>597.IBPluginDependency</string>
-					<string>598.IBPluginDependency</string>
 					<string>599.IBPluginDependency</string>
 					<string>603.IBPluginDependency</string>
 					<string>604.IBPluginDependency</string>
@@ -7694,6 +7715,10 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<integer value="2"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -7914,8 +7939,6 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableDictionary">
 						<string key="NS.key.0">ToolTip</string>
 						<object class="IBToolTipAttribute" key="NS.object.0">
@@ -8075,7 +8098,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">1003</int>
+			<int key="maxID">1009</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
